# R3000-Emu

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  EProjectsgithubLiveR3000-Emuworkbenchcli_full.txt  LICENSE  README.md  bios_loop_debug.txt  run.bat  stderr_cli_nohle.txt
.claude/: piper-voices-dir.txt
.claude/config/: audio-effects.cfg
_bmad-output/: bmgd-workflow-status.yaml
_bmad-output/planning-artifacts/: bmm-workflow-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmgd/: config.yaml
bios/: README.md
docs/: DEBUG_UE5_STUCK.md  duckstation_ridgeracer_boot.txt
scripts/: build_dbg.ps1  check_dir_offset.py  check_sector.py  compare-duckstation.ps1  compare_duckstation_ref.template.txt  copy-bios-to-default.ps1  disasm_bios.py  duckstation_gdb_capture.gdb  duckstation_gdb_capture_hbreak.gdb  duckstation_gdb_capture_hook.gdb  duckstation_gdb_one_8005ef30.gdb  duckstation_gdb_one_80067938.gdb  duckstation_gdb_one_8006797c.gdb  dump_handler.ps1  dump_memtest.ps1  dump_memtest2.ps1  dump_pathtable.ps1  dump_pvd_detail.ps1  dump_ram.ps1  dump_rom.ps1  dump_sector.ps1  dump_sector22.ps1  extract-compare-from-iolog.ps1  filter_bios.ps1  find_garbage_in_sector.py  find_pattern_context.py  make-duckstation-ref-skeleton.ps1  parse_directory.py  parse_psxgpu_dump.py  quick_test.ps1  read_sector.ps1  read_sector_data.ps1  run_bios_long.ps1  run_biosboot.ps1  run_fastboot.ps1  run_fastboot2.ps1  run_fastboot3.ps1  run_fastboot4.ps1  run_fastboot5.ps1  run_hle_test.ps1  (+15 more)
src/: main.cpp
(+114 files in other folders)
